--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,12 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
+  font_awesome_flutter: ^10.7.0
   get: ^4.6.6
   google_fonts: ^6.2.1
   liquid_swipe: ^3.1.0
+  shimmer: ^3.0.0
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   change_app_package_name:
